# hat-renderer

./: .buildinfo  CNAME  README.rst  index.html  objects.inv  package-lock.json  package.json  pyproject.toml  renderer.html  requirements.pip.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  renderer.doctree
.github/workflows/: docs.yaml  main.yaml
_sources/: index.rst.txt  renderer.rst.txt
docs/: conf.py
src_doit/: __init__.py
src_js/: index.js  index.ts  vdom.ts
src_js/@hat-open/: renderer.js
test_jest/: renderer.test.ts
