[project]
name = "hat-renderer"
version = "0.6.4"
description = "Hat virtual DOM renderer"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-renderer.git"
Documentation = "http://hat-renderer.hat-open.com"

[project.optional-dependencies]
dev = ["hat-doit ~=0.15.16"]
